--- a/css/style.css
+++ b/css/style.css
@@ -1907,9 +1907,9 @@ body {
   z-index: 2;
 }
 
-#name-form,
-#email-form,
-#textarea {
+.name-user,
+.email-user,
+.textarea {
   width: 220px;
   height: 38px;
   margin: 0px;
@@ -1921,7 +1921,7 @@ body {
   padding-left: 10px;
 }
 
-#textarea {
+.textarea {
   width: 460px;
   height: 114px;
 }
